fix: hour align

--- a/src/components/marketingSetup/MarketingSetup.scss
+++ b/src/components/marketingSetup/MarketingSetup.scss
@@ -295,7 +295,7 @@
       width: 14%;
       padding: 0 10px;
       height: 30px;
-      margin-bottom: 4px;
+      margin-bottom: 3.9px;
       display: flex;
       justify-content: space-evenly;
       color: #212b36;
